syntax = "proto3";
option java_multiple_files = true;
package com.GoFit.SystemEvent;

message EventRequest {
  string timestamp = 1;
  string microservice = 2;
  string actionType = 3;
  string resourceName = 4;
  string responseType = 5;
}

message EventResponse {
  string status = 1;
}

service EventService {
  rpc save(EventRequest) returns (EventResponse);
}
